--- a/portfolio_using_css.html
+++ b/portfolio_using_css.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Portfolio of Aryaman Ghaisas</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aryaman Ghaisas - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
-        <h1>Portfolio of Aryaman Ghaisas</h1>
+        <h1>Aryaman Ghaisas</h1>
         <p>Data Science | Machine Learning | Tech Enthusiast</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#goals">Goals</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
+
         <section id="about">
             <h2>About Me</h2>
-            <div class="profile-pic">
+            <div class="profile">
                 <img src="/Users/aryamanghaisas/Downloads/WebDev projects/IMG_3595.jpeg" alt="Aryaman Ghaisas">
+                <p>Hello! I'm Aryaman Ghaisas, a sophomore at VIT Vellore, pursuing B.Tech in Computer Science with a specialization in Data Science. An academically driven individual with a strong sense of responsibility and exceptional time management skills. Known for being level-headed and maintaining clarity in challenging situations, 
+                    I am a quick learner and an analytical thinker, always eager to adapt and excel in new environments.</p>
             </div>
-            <p>Hello! I'm Aryaman Ghaisas, a sophomore at VIT Vellore, pursuing B.Tech in Computer Science with Data Science specialisation...</p>
         </section>
 
         <section id="education">
-            <h2>Educational Background</h2>
-            <p><strong>B.Tech in Computer Science and Engineering (Data Science)</strong><br>VIT Vellore (2023-2027)</p>
-            <p><strong>Schooling</strong><br>Gundecha Education Academy, Mumbai (2009-2023)</p>
+            <h2>Education</h2>
+            <p><strong>B.Tech in Computer Science and Engineering (Data Science)</strong><br>VIT Vellore (2023-2027)<br>CGPA: 9.71</p>
+            <p><strong>Schooling</strong><br>Gundecha Education Academy(ICSE Board), Mumbai (2009-2023)</p>
         </section>
 
         <section id="skills">
             <h2>Skills</h2>
-            <ul>
-                <li>Python, SQL, HTML, CSS</li>
-                <li>Machine Learning, Data Analysis</li>
-                <li>Git, AWS, APIs</li>
-            </ul>
+            <div class="skill-container">
+                <span>Python</span>
+                <span>PostgreSQL</span>
+                <span>Machine Learning</span>
+                <span>Exploratory Data Analysis</span>
+                <span>DSA</span>
+            </div>
         </section>
 
         <section id="goals">
             <h2>Future Goals</h2>
             <div class="goal">
-                <h3>Innovating with AI</h3>
-                <p>Aspiring to lead in AI development with a focus on predictive modeling and automation.</p>
+                <h3>Innovating with ML</h3>
+                <p>Aspiring to lead in ML development with a focus on predictive and forecasting modeling.</p>
             </div>
             <div class="goal">
                 <h3>Ethical AI Research</h3>
@@ -63,10 +80,12 @@
             <p>LinkedIn: <a href="https://www.linkedin.com/in/aryaman-ghaisas-3b905128b/">Visit My Profile</a></p>
             <p>GitHub: <a href="https://github.com/aryaman2603">My Past Work</a></p>
         </section>
+
     </main>
 
     <footer>
         &copy; 2024 Aryaman Ghaisas. All Rights Reserved.
     </footer>
+
 </body>
 </html>
