--- a/PawPalace/help.html
+++ b/PawPalace/help.html
@@ -55,7 +55,24 @@
             <div class="help-text">
                 <h2>💖 Donate</h2>
                 <p>Your donation provides food, medical care, and shelter for homeless pets.</p>
-                <a href="donate.html" class="help-btn">Donate Now</a>
+                <a href="#" class="help-btn" onclick="openDonationForm()">Donate Now</a>
+            </div>
+
+        </div>
+        <div id="donationForm" class="donation-popup">
+            <div class="donation-content">
+                <span class="close-btn" onclick="closeDonationForm()">&times;</span>
+                <h2>Make a Donation</h2>
+                <label for="donationAmount">Enter Amount: </label>
+                <input type="number" id="'donationAmount" min="1" placeholder="100">
+
+                <label for="paymentMethod">Select Payment Method</label>
+                <select id="paymentMethod">
+                    <option value="credit-card">Credit Card</option>
+                    <option value="UPI">UPI</option>
+                </select>
+                <button onclick="processDonation()">Donate</button>
+                <p id="donationStatus"></p>
             </div>
         </div>
         <div class="counter-container">
