--- a/PawPalace/index.html
+++ b/PawPalace/index.html
@@ -6,7 +6,7 @@
     <title>About Us - PawPalace</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -15,6 +15,8 @@
         <a href="index.html" class="home-btn">
             <i class="fas fa-home"></i>
         </a>
+        
+
         <div class="dropdown">
             <button class="dropbtn">☰ Menu</button>
             <div class="dropdown-content">
